// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Error logged if no title given 1`] = `
<Touchable
  onPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "margin": 5,
          "padding": 5,
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
        }
      }
    />
  </View>
</Touchable>
`;

exports[`Render SubjectBadge renders without crashing 1`] = `
<Touchable
  onPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "margin": 5,
          "padding": 5,
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffff",
        }
      }
    >
      Test
    </Text>
  </View>
</Touchable>
`;
